--- a/src/app/settings/categories/categories.component.html
+++ b/src/app/settings/categories/categories.component.html
@@ -1,5 +1,4 @@
 
-<p>{{message}}</p>
 <ng-template #itemTemplate let-item="item" let-onCollapseExpand="onCollapseExpand" let-onCheckedChange="onCheckedChange">
   <div class="form-inline row-item">
     <i *ngIf="item.children" (click)="onCollapseExpand()" aria-hidden="true" class="fa" [class.fa-caret-right]="item.collapsed"
@@ -13,7 +12,7 @@
         <i class="fa fa-plus" aria-hidden="true" title="Add" (click)="removeItem(item)"></i>
       </label>
       <label class="form-check-label" (click)="item.checked = !item.checked; onCheckedChange()">
-          <input (blur)="resetMessage()" type="text" class="form-control" value="{{item.text}}" (keydown.enter)="onKeydown(item,$event,'name')"/>
+          <input type="text" class="form-control" value="{{item.text}}" (keydown.enter)="onKeydown(item,$event,'name')"/>
         
       </label>
     </div>
