--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -160,7 +160,7 @@
                 <app-title></app-title>
             </ol>
             <router-outlet></router-outlet>
-
+            <notifier-container></notifier-container>
         </div>
         <!-- /.container-fluid-->
         <!-- /.content-wrapper-->
