--- a/src/app/products/product-detail.component.html
+++ b/src/app/products/product-detail.component.html
@@ -16,7 +16,7 @@
             <div class="col-md-4">
                 <div class="form-group">
                     <label>Supplier Address:</label>
-                    {{product.supplier?.postalAddress}}
+                    {{product.supplier?.physicalStreetAddress}}
                 </div>
             </div>
         </div>
